# vue_actix_example

./: docker-compose.yaml
back/: .env  Cargo.toml  Dockerfile
back/entity/: Cargo.toml
back/entity/src/: lib.rs  permission.rs  user.rs  user_permission.rs
back/migration/: Cargo.toml
back/migration/src/: lib.rs  permission_migration.rs  user_permission_migration.rs
back/src/: main.rs
back/src/controllers/: mod.rs  permission_controller.rs  user_controller.rs  user_permission_controller.rs
back/src/services/: mod.rs  permission_service.rs  user_permission_service.rs  user_service.rs
front/: .env  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
front/src/: App.vue
front/src/assets/: main.css
front/src/components/: PermissionCreateComponent.vue  PermissionListComponent.vue  UserItemComponent.vue  UserListComponent.vue  UserPermissionListComponent.vue
front/src/models/: permission.ts  user.ts
front/src/router/: index.ts
front/src/stores/: permissionStore.ts  userStore.ts
front/src/views/: HomeView.vue  PageNotFoundView.vue  PermissionCreateView.vue  PermissionListView.vue  UserCreateView.vue  UserListView.vue  UserModifyView.vue
