[package]
name = "test_actix"
version = "0.1.0"
edition = "2021"
authors = ["Cyril Couffe <no-reply@rust-lang.org>"]
rust-version = "1.71.1"
description = "A minimal function API with Actix web, sea-orm, and sqlite"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
actix-web = "4.4.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
actix-cors = "0.7.0"

[dependencies.sea-orm]
version = "0.12.6"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]
